HOWTO and filesample updates

--- a/examples/preprocess/upscale/structured.cfg
+++ b/examples/preprocess/upscale/structured.cfg
@@ -5,11 +5,15 @@ pipeline = Structured,
 
 # General
 [General]
-output-file = coarse_mesh.vtk
+output-file = fine_mesh.vtk # Name the file you want to export.
+                            # for data visualization you should have a .vtk
+                            # extension whereas for any preprocessing you
+                            # sohuld use  .h5m extension
+fine-grid = coarse_grid # Or fine-grid
 
 [StructuredUPS]
 coarse-ratio = 3, 3, 3
 mesh-size = 12, 12, 12
 block-size = 1, 1, 1
-method = Average
-average = Arithmetic
+method = Flow-based # Or Average
+average = Arithmetic # Or Geometric, Harmonic
