Fixing modules to work with Python3

--- a/examples/preprocess/multiscale/structured.cfg
+++ b/examples/preprocess/multiscale/structured.cfg
@@ -1,11 +1,14 @@
 # Creates a 12 x 12 x 12 fine mesh with a coarsening ratio of 3
 
+[Preprocessor]
+pipeline = presto.Preprocessors.Multiscale.Structured,
+
 # General information
 [General]
-output-file = multiscale_mesh_1.vtk
+output-file = multiscale_mesh_1.h5m
 
 # Structured Multiscale mesh options
 [StructuredMS]
   coarse-ratio = 3, 3, 3
-  mesh-size = 12, 12, 12
-  block-size = 10, 20, 30
+  mesh-size = 9, 9, 9
+  block-size = 1, 1, 1
